--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "ember-date-component",
+  "version": "1.13.11",
   "homepage": "https://github.com/igorgoroshit/ember-date-component",
   "authors": [
     "Igor Goroshit <igor@webt.co.il>"
